# made_hw_algos

./: CMakeLists.txt
hw2/: hw_3_2.cpp  hw_4_1.cpp  task_3_2.cpp
hw3/: task_6_4.cpp  task_7_4.cpp
hw4/: task_8_1.cpp
hw5/: Huffman.h  task8_1.cpp  task_8_1.cpp  task_9_1.cpp
hw6/: task_11_2.cpp  task_12.cpp
hw7/: task_13.cpp  task_14_2.cpp
