cmake_minimum_required(VERSION 3.15)
project(hw)

set(CMAKE_CXX_STANDARD 17)

add_executable(hw41 hw2/task_4_1.cpp)
add_executable(hw32 hw2/task_3_2.cpp)
add_executable(hw64 hw3/task_6_4.cpp)
add_executable(hw74 hw3/task_7_4.cpp)
add_executable(hw81 hw4/task_8_1.cpp)
add_executable(hw9 hw5/task_9_1.cpp)
add_executable(hw112 hw6/task_11_2.cpp)
add_executable(hw12 hw6/task_12.cpp)
